resources/assets/stylesheets/highcontrast.scss
/* ... */
.sidebar-widget-content ul li form,
.sidebar-widget-content form,
.-widget-content form {
    border: unset !important;
}

.studip-widget,
.studip-widget:hover {
    border: 2px solid $black;

}

// hover over sidebar list elements ...
.sidebar-widget-content > ul > li > a {
    color: $black;

    &:hover {
        background-color: $black;
        color: $white;
    }
}
// .. except for "Ansichten"
.sidebar-widget-content > ul.sidebar-views > li > a:hover {
    background-color: transparent;
    color: $contrast-red;

}

.widget-links button,
.widget-links.sidebar-views > li.active a,
.widget-links.sidebar-views > li.active button {
    color: $black;
}
.widget-links.sidebar-views > li:hover button,
.widget-links.sidebar-views > li:hover a {
    color: $black;
    background-color: $medium-gray;
}


.widget-links.sidebar-navigation > li.active {
    background-color: $black !important;
    color: $white !important;
    box-shadow: unset;

}


.widget-links.sidebar-navigation > li.active,
.widget-links.sidebar-navigation > li.active a {

    &::before,
    &::after {
        border-left-color: $black;
    }
}


// "Ansichten" need to be white
.widget-links.sidebar-views > li.active {
    background-color: $medium-gray;
    box-shadow: unset;
    border-top: 2px solid $black;
    border-bottom: 2px solid $black;

    a {
        color: $black;
    }

    &:hover {
        background-color: $darkergray;

        a {
            color: $white;
        }
    }
}

.widget-links.sidebar-views > li.active:before {
    border-left: 10px solid $black;
}

.widget-links.sidebar-views > li.active:after {
    border-left-color: $medium-gray;
}

.sidebar-search input[type=submit] {
    background-color: $black;
}

/* Black borders */
.sidebar-widget,
.sidebar-widget-placeholder,
section.contentbox,
article.studip,
form.default,
table.default {
    // this is making problems in so many ways
    border: 2px solid $black;

    > header > nav {
        > a {
            color: $white;
        }

        > a:before {
            filter: brightness(100);
        }

        .action-menu .action-menu-icon {
            filter: brightness(100);
        }

        .action-menu.is-open .action-menu-icon {
            filter: brightness(0);
        }
    }

}

article.wiki {
    border: unset;
}

// remove this border, else you end up having two
.studip-widget > div > article.studip {
    border: none !important;
}

/* Sections,Articles and Forms header */
section.contentbox header,
article.studip header,
form.default fieldset > legend {
    background-color: $black;
}

section.contentbox header h1,
section.contentbox header h1 a,
section.contentbox header,
article.studip > header,
article.studip > header h1,
article.studip > header h1 > a,
article.studip > header > nav > *,
form.default fieldset > legend  {
    color: $white !important;
    border: 1px solid $black;
}

.action-menu-wrapper .action-menu-icon span,
.action-menu .action-menu-icon span {
    border: unset;
}

section.contentbox header h1 a:before,
article.studip.toggle > header h1 > a:before,
article.studip > header h1 > a > img,
article.studip > header > a > img,
article.studip > header > nav > a > img {
    filter: brightness(100);

}

// brightness does not work with black icons,so make it white this way
article.studip > header h1 > img {
    filter: invert(100%);
}

article.new.toggle > header h1 > a::before {
    filter: unset !important;
}

// avoid having double outline and weird line at bottom
form.default table.default {
    border: unset;

    tbody:last-of-type>tr:last-child>td {
        border-bottom: unset;
    }
}

/* Sections,Articles and Forms footer */
form.default footer,
table.default > tfoot > tr > td {
    background-color: $white;
}

/* Tables */
table.default > tbody > tr > th,
table.default > thead > tr > th {
    background-color: $black;
    color: $white !important;

    a {
        color: $white !important;
        text-decoration: underline;
    }
}

tr.sortable th.sortasc:after {
    filter: brightness(100);
}

table td.printcontent,
table td.printcontent:hover {
    background-color: $white;
}

table.toolbar,
td.printhead,
td.toolbar {
    background-color: $white !important;
    background-image: unset;
    border-top: 2px solid $black;
    line-height: 30pt;
}

.table_header_bold {
    background-color: $black;
}

// Table header Icons must be white ...
table.default thead .actions img,
table.default thead .actions input[type=image],
table.default thead .actions svg {
    filter: brightness(100);
}

// ... but Icons in Table Data must be black
table.default .actions .action-menu .action-menu-icon {
    filter: brightness(0);
}

table.dates .nextdate {
    background-color: $lightgray;

    > td > a {
        color: $black;
    }
}

/* Action Menu */
.action-menu-wrapper .action-menu-content,
.action-menu .action-menu-content {
    border: 2px solid $black;
    font-weight: 600;
}

/* FOOTER */
#main-footer {
    background-color: $black;
    color: $white;
    font-weight: 700;

    > ul > li > a {
        color: $white;

        &:hover {
            color: $white !important;
            text-decoration: underline;
        }
    }

}

/* ICONS */
body:not(.fixed) #navigation-level-1-items li.active > a img,
body:not(.fixed) #navigation-level-1-items li:hover > a img,
form div.files-search.input-group .input-group-append img {
    filter: brightness(0) !important;
}

tr.sortable th.sortdesc:after,
.course-admin th .course-completion,
.sortable-table .tablesorter-headerDesc .tablesorter-header-inner:after,
.sortable-table .tablesorter-headerAsc .tablesorter-header-inner:after,
.action-menu-wrapper .action-menu-icon,
.action-menu .action-menu-icon,
.contentbox header nav .tooltip-icon,
article header h1 .tooltip-icon,
section.course-statusgroups article header h1 a img {
    filter: brightness(100);
}

// profile image
#avatar-menu .action-menu-icon,
.action-menu.is-open .action-menu-icon {
    filter: unset;
}
/* ... */

